--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,13 +8,13 @@ jobs:
     steps:
 
     - name: Set up Go 1.12
-      use: actions/setup-go@v1
+      uses: actions/setup-go@v1
       with:
         version: 1.12
       id: go
 
     - name: Check out code into the Go module directory
-      use: actions/checkout@master
+      uses: actions/checkout@master
       path: ${{ go.module-path }}
 
     - name: Get dependencies
