--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,8 +14,8 @@ jobs:
       id: go
 
     - name: Check out code into the Go module directory
-      use: actions/checkout@master
-      path: ${{ go.module-path }}
+      uses: actions/checkout@master
+      # path: ${{ go.module-path }}
 
     - name: Get dependencies
       working-directory: ${{ go.module-path }}
