--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,19 +13,10 @@ jobs:
         version: 1.12
       id: go
 
-    - name: Check out code into the Go module directory
+    - name: Check out code
       uses: actions/checkout@master
-      path: ${{ go.module-path }}
 
     - name: Get dependencies
-      working-directory: ${{ go.module-path }}
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
-
+      run: GO111MODULE=on go mod download
     - name: Build
-      working-directory: ${{ go.module-path }}
-      run: go build -v .
+      run: GO111MODULE=on go build -v .
